--- a/gem.html
+++ b/gem.html
@@ -2,7 +2,7 @@
      ng-click="gemCtrl.explode(gem)"
      ng-mouseenter="gemCtrl.highlightOn(gem)"
      ng-mouseleave="gemCtrl.highlightOff()"
-     style="-webkit-transform: rotate({{gem.angle}}deg);">
+     style="transform: rotate({{gem.angle}}deg);">
     <svg class="gem__svg"
          viewBox="0 0 200 200"
          xmlns="http://www.w3.org/2000/svg"
