--- a/index.html
+++ b/index.html
@@ -4,22 +4,30 @@
         <meta charset="utf-8" />
         <title>ng-gem-puzzle</title>
 
+        <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
+        <link rel="apple-touch-icon" href="touch-icon.svg">
 
         <link rel="stylesheet" href="dist/main.css" type="text/css" />
 
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.min.js"></script>
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular-animate.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.6/fastclick.js"></script>
+
         <script src="dist/app.js"></script>
     </head>
 
-    <body ng-app="gem-puzzle">
-        <div class="gem-puzzle" ng-controller="GemController" ng-init="restart()">
-            <div class="gem-board gem-panel">
+    <body ng-app="gem-puzzle" onload="FastClick.attach(this)">
+        <div class="gem-puzzle gem-panel"
+             style="width: {{ size * cols }}px;"
+             ng-controller="GemController" ng-init="restart()">
+            <div class="gem-board">
                 <div class="gem-grid gem-grid_game-over_{{isGameOver()}}">
                     <div class="gem-cell gem-cell_animated"
                          ng-repeat="gem in getGems()">
                         <div class="gem gem_color_{{gem.color}} gem_highlight_{{gem.highlight}} gem_exploded_{{gem.exploded}}"
+                             style="width: {{size}}px; height: {{size}}px;"
                              ng-click="explode(gem)"
                              ng-mouseenter="highlightOn(gem)"
                              ng-mouseleave="highlightOff()">
@@ -39,13 +47,11 @@
                 </div>
             </div>
 
-            <div class="gem-stats gem-panel">
-                <h2>Score</h2>
+            <div class="gem-stats">
                 <ul>
                     <li><strong>Gems:</strong> {{stats.gems}}</li>
                     <li><strong>Matches:</strong> {{stats.strings}}</li>
-                    <li><strong>Longest match:</strong> {{stats.maxString}}</li>
-                    <li><big><strong>Total score:</strong> {{stats.totalScore}}</big></li>
+                    <li><strong>Longest:</strong> {{stats.maxString}}</li>
                 </ul>
             </div>
 
