--- a/index.html
+++ b/index.html
@@ -11,39 +11,35 @@
 
         <link rel="stylesheet" href="dist/main.css" type="text/css" />
 
-        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.min.js"></script>
-        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular-animate.min.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.0-beta.5/angular.min.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.0-beta.5/angular-animate.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.6/fastclick.js"></script>
 
         <script src="dist/app.js"></script>
     </head>
 
     <body ng-app="gem-puzzle" onload="FastClick.attach(this)">
-        <div class="gem-puzzle gem-panel"
-             style="width: {{ size * cols }}px;"
-             ng-controller="GemController" ng-init="restart()">
-            <div class="gem-board">
-                <div class="gem-grid gem-grid_game-over_{{isGameOver()}}">
-                    <div class="gem-cell gem-cell_animated"
-                         ng-repeat="gem in getGems()">
-                        <div class="gem gem_color_{{gem.color}} gem_highlight_{{gem.highlight}} gem_exploded_{{gem.exploded}}"
-                             style="width: {{size}}px; height: {{size}}px;"
-                             ng-click="explode(gem)"
-                             ng-mouseenter="highlightOn(gem)"
-                             ng-mouseleave="highlightOff()">
-                            <svg class="gem__svg"
-                                 viewBox="0 0 200 200"
-                                 xmlns="http://www.w3.org/2000/svg"
-                                 xmlns:xlink="http://www.w3.org/1999/xlink">
-                                <polygon class="gem__polygon"
-                                         ng-attr-points="{{gem.points}}" />
-                            </svg>
-                        </div>
-
-                        <span class="gem-count" ng-show="initiatedExplosion(gem)">
-                            {{getExplodedCount()}}
-                        </span>
+        <div class="gem-puzzle" ng-controller="GemController">
+            <div class="gem-grid gem-grid_game-over_{{isGameOver()}}"
+                 gem-init
+                 style="width: {{size * cols}}px">
+                <div class="gem-cell gem-cell_animated"
+                     ng-repeat="gem in getGems()">
+                    <div class="gem gem_color_{{gem.color}} gem_highlight_{{gem.highlight}} gem_exploded_{{gem.exploded}}"
+                         style="width: {{size}}px; height: {{size}}px;"
+                         ng-click="explode(gem)"
+                         ng-mouseenter="highlightOn(gem)"
+                         ng-mouseleave="highlightOff()">
+                        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                             ng-attr-view_box="0 0 {{gem.viewBox}} {{gem.viewBox}}"
+                             class="gem__svg">
+                            <polygon class="gem__polygon" ng-attr-points="{{gem.points}}" />
+                        </svg>
                     </div>
+
+                    <span class="gem-count" ng-show="initiatedExplosion(gem)">
+                        {{getExplodedCount()}}
+                    </span>
                 </div>
             </div>
 
@@ -55,11 +51,11 @@
                 </ul>
             </div>
 
-            <div class="gem-dialog gem-dialog_animated gem-panel" ng-show="isGameOver()">
+            <div class="gem-dialog gem-dialog_animated" ng-show="isGameOver()">
                 <h2>Game over!</h2>
 
                 <p>
-                    Your score is {{ stats.totalScore }}
+                    Your score is {{stats.totalScore}}
                 </p>
 
                 <button ng-click="restart()">
